[metadata]
name = yacv
author = Ashutosh Sathe
author-email = 2ashutoshbs@gmail.com
summary = Yet Another Compiler Visualizer
description-file = README.md 
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/ashutoshbsathe/yacv
project_urls = 
    Bug Tracker = https://github.com/ashutoshbsathe/yacv/issues
    Documentation = https://ashutoshbsathe.github.io/yacv 
    Source Code = https://github.com/ashutoshbsathe/yacv 
license = MIT 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.6

[files]
packages = yacv 

[entry_points]
console_scripts = 
    yacv = yacv.__main__:main
